# recipe_recommender

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  codecov.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  railway.json  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main.yml
docs/: API.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  FRONTEND.md  ML_MODEL.md  OPERATIONS.md
docs/source/: conf.py
food-recipe-recommender/: app.py  main.py  preprocessing.py
food-recipe-recommender/app/: .gitignore  __init__.py  app.py  config.py  models.py  routes.py  utils.py
food-recipe-recommender/app/blueprints/: admin.py  auth.py  misc.py  recipes.py  saved.py
food-recipe-recommender/app/frontend/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
food-recipe-recommender/app/frontend/coverage/: lcov.info
food-recipe-recommender/app/frontend/coverage/lcov-report/: index.html
food-recipe-recommender/app/frontend/coverage/lcov-report/components/: AuthContext.tsx.html  ProtectedRouter.tsx.html  alert.tsx.html  auth-layout.tsx.html  avatar.tsx.html  badge.tsx.html  button.tsx.html  card.tsx.html  checkbox.tsx.html  combobox.tsx.html  description-list.tsx.html  dialog.tsx.html  divider.tsx.html  dropdown.tsx.html  fieldset.tsx.html  heading.tsx.html  index.html  input.tsx.html  link.tsx.html  listbox.tsx.html  navbar.tsx.html  pagination.tsx.html  radio.tsx.html  saveButton.tsx.html  select.tsx.html  sidebar-layout.tsx.html  sidebar.tsx.html  stacked-layout.tsx.html  switch.tsx.html  table.tsx.html  text.tsx.html  textarea.tsx.html
food-recipe-recommender/app/frontend/coverage/lcov-report/services/: api.ts.html  index.html  ingredients.ts.html  (+2 more)
food-recipe-recommender/app/frontend/src/js/: App.tsx  main.tsx
food-recipe-recommender/app/frontend/src/styles/: index.css
food-recipe-recommender/app/services/: __init__.py  model_service.py  recipes_utils.py  recommendation_service.py
food-recipe-recommender/app/templates/: base.html  index.html
food-recipe-recommender/data-pipeline/: main.py
food-recipe-recommender/data-pipeline/modules/: async_ingredient_scraper.py  features.py  ingredient_enricher.py  modeling.py  preprocessing.py  recommender.py  validation_checks.py
food-recipe-recommender/models/: recipe_recommender_model.joblib  scaler.joblib
food-recipe-recommender/src/: config.py  feature_engineering.py  feature_selection.py  features.py  modeling.py  preparation_time.py  preprocessing.py  recommender.py  validation_checks.py
food-recipe-recommender/tests/: test_data_validation.py  test_feature_engineering.py  test_model_evaluation.py
recipe_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_additional_coverage.py  test_admin_and_reset.py  test_api_basic.py  test_auth_and_saved.py  test_integration_live.py  test_login_and_search.py  test_models_coverage.py  test_more_branches.py  test_recipes_endpoints.py  test_sample.py  test_utils_coverage.py
(+123 files in other folders)
