[project]
name = "recipe-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "pytest-flask>=1.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "resend>=2.14.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "waitress>=3.0.2",
    "werkzeug>=3.1.3",
    "wordcloud>=1.9.4",
    "wtforms>=3.2.1",
]
